discussion + limitations and future work

--- a/paper/biPartiteWikipedia.tex
+++ b/paper/biPartiteWikipedia.tex
@@ -160,7 +160,7 @@ John Chuang\\
 
 \input{sections/related_work.tex}
 
-\input{sections/method.tex}
+\input{sections/method2.tex}
 
 %With some imagination Wikipedia, and many other online collaborative projects can be viewed as such a market. (Here we only consider English Wikipedia). We consider Wikipedia Editors to be our "countries", and Wikipedia Articles to be "products". Therefore a country producing a product is interpreted as an editor editing an article. We also inherit the assumption that the better editors will be those who edit the rarer articles, although we re-adjust that assumption in instructive ways later on. 
 
