--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -1,19 +1,8 @@
 \section{Discussion}
+The {\it random walker} reflexion ranking method was initially proposed by Caldarelli et al. \cite{caldarelli2012networks} to predict the ranking of countries in terms of GDP from their capabilities to produce and export products. They achieve reasonable correlation (Pearson correlation $corr \approx 0.4$ for $\alpha \approx 1.1$ and $\beta \approx 0.8$ ) between their method and the actual GDP ranking. We have reused and adapted the method to rank the expertise of editors and the quality of articles in ten categories of Wikipedia. We find that the rank correlation between our predictions and Grand Truth exogenous metrics is on average much higher with a distinction between articles and editors regarding their evolution as categories get further contributions. While the rank correlation of articles is stable over time for all categories, the correlation increases for editors as categories get more contributions. When calibrating the biases of the random walker method, we find that $\alpha=0$ and $\beta <0 $ for editors and $\alpha = b\cdot \beta + 1$ for articles, with  $\alpha <1 $ and $b$ varying for each category.
 
-One of the brightest results here is that in using the method described for predicting world economies by GDP, we not only can predict Wikipedia editor and article rankings, but outperform the original application. Whereas in \cite{caldarelli2012network} they achieve a maximum correlation of 0.4, that is on the lower end of our results. 
+A way to explain the large difference of correlations between the original application of the method and our results goes back to the problem of inferring {\it capabilities}. In macro-economics, there are circumstantial factors that influence a countries capabilities. For instance, the geographical location of a country determines access to natural resources. For knowledge production there is no such factor: knowledge is an intangible asset. This might explain why the method fits better in the context of online open collaboration, even though we have used a vey rough input matrix with information only on whether an editor as modified a given article. It is also important to note that where we have measured the dependence between the bi-partite random walker model and the Grand Truth along two axes : editors and articles, while it is certainly more difficult to compute the GDP of a product, or a class of products in the economy. Editor and article rankings exhibit indeed different correlation evolution patterns. This is striking because the method is reflexive and the same information is incorporated on both dimensions from the input matrix $\mathbf{M}$. While we have no definitive answer, we interpret this result in the following way: from Figure \ref{fig:triangle_matrix}, we see that there are usually more editors than articles for a category. This means that the probability for an article to get contributions early on is higher than the probability to find editors who have contributed to a lot of articles early. In other words, it takes more time to rightly rank editors because there are more compared to the number of articles in a given category.
 
-A theory to explain this behaviour goes back to the original motivation in creating this method, that of trying to find "capabilities". In Economics there are circumstantial factors that influence a countries capabilities, e.g. Geography or Politics. However in Wikipedia all outputs are only due to the editors' true underlying capabilities. There are no commodities and articles have no intrinsic value until they are written. If this explained why our correlations were higher, it might also be true for other online collaboration sites, where users operate in a within a greater meritocracy.
+The values $\alpha$ and $\beta$ calibrated from the bi-partite network walker model provide interesting insights on the way value is created on Wikipedia. For articles, $\alpha$ is smaller than one or negative, which means that better articles are made by less fit editors. As a counter example, we refer two or more power users fighting over a page and who can leave it worse than not being touched at all \cite{halfaker2013}.  $\beta$ varies between negative and positive values as a function of categories: for $\beta < 0$ articles are more fit if the editors have edited more articles, for $\beta > 0$ articles have a better quality if the editors have edited other articles of high quality. This suggests that the quality of articles in some categories relies more on the variety of contributions, and hence favor more knowledge circulation, while others require prime focus on quality.
 
-Yet viewing result from the other side is more important, as much as we are uncovering hidden capability of editors, we can better predict article quality. Arguably this is more substantial because it answers the open source question, of being able to judge qualitative, subjective natural language files, even if we can't compile and benchmark them.   
-
-In Wikipedia there has been discussion about the importance of super-users who represent a small fraction of editors but contribute a majority of content. \cite{website:wikinewsreporter}. It is possible now to take $\alpha$ as a measure of importance of superuser contributions. Since different categories we correlate more highly for different ranges of $\alpha$ it is possible to compare the success of super-users in different categories. Moreover we can also find which categories are most closely modelled by low or negative values of $\alpha$ which represents better articles are made by less fit editors. Ways to determine this pheonomena could be two or more power users fighting over a page can leave it worse than not being touched at all. A concern raised in \cite{halfaker2013}.  
- 
- 
-When we use $\mathbf{M}$ which is a binary version of $\mathbf{\hat{M}}$ we achieve better results. Knowing that editor touched an article, is more informative than knowing the edit count.  Wikipedia even acknowledges its {\it editcountitis, Compteurdédite} with the essay \cite{editcountitis}
-Wikipedia has never been explicitly gamified, but some editors are immediately attracted to tracking their performance. This leaves us with an overused, and perverse-incentive metric. In fact what we have shown is that edit truly is meaningless when it comes to predicting editor investment and quality.
-
-
-
-This is a departure from the economics domain, where the best fits for GDP are only in the positive / positive $\alpha$-$\beta$ quadrant.
-In the cases where maximizing $\alpha$, $\beta$ solution spaces are linear we get a kind of single variable characteristic of a category. 
 
