added figure landscapes

--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -16,7 +16,7 @@ We now turn to the values of $\alpha$ and $\beta$ for which best correlation is 
 
 \begin{figure}[!t]
 \centering
-\includegraphics[width=0.9\columnwidth]{Figures/contour_fem.png}.
+\includegraphics[width=0.9\columnwidth]{Figures/contour_fem_combined.png}.
 \caption{Typical landscape of maximum correlation as a function of $\alpha$ and $\beta$ for editors (upper panel) and articles (lower panel). The contour line shows the 90th percentile of the rank correlation over the landscape. It typically displays a linear function between $\alpha$ and $\beta$. For articles, the relationship is typically of the type $\alpha = - b \beta + 1$ for $\beta >0$ or $\alpha = b \beta + 1$ for $\beta < 0$ with $b>0$ varying for each category. For editors, the relationship is $\alpha = 0$ for $\beta < ??$. {\it please add the corresponding figure for editors.  that would be great if you could make the labels ($\alpha$ and $\beta$) WAY bigger. You can also get remove the title. The cherry on the cake would be to have the color bar equal or smaller than the vertical dimension of the landscape, with keeping the landscape as a square rather than a rectangle.}}
 \label{fig:landscape}
 \end{figure}
