new abstract + half intro

--- a/paper/biPartiteWikipedia.tex
+++ b/paper/biPartiteWikipedia.tex
@@ -138,9 +138,6 @@ John Chuang\\
 
 \input{sections/intro.tex}
 
-
-
-
 %Theory of ranking  \cite{Blumm2012}
 
 %\subsection{criticism of alternative economy}
@@ -180,6 +177,7 @@ John Chuang\\
 
 \input{sections/limitations.tex}
 
+\input{sections/conclusion.tex}
 
 %For each snapshot, we constructed the matrix $\mathbf{M_{e,a}}$ of contributors versus edited articles, similar to the country versus products matrix of the Economics Domain. For each snapshot, the values in $\mathbf{M_{e,a}}$ are defined as the number of edits made by editor $e$ on article $a$ in the category occurring in the snapshot time. Note that the final snapshot represents the entire history of the category up to the present date. 
 
