--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -16,17 +16,17 @@ The correlations are generally quite high ( $ 0.46 < \rho_e < 0.75$ with $\langl
 
 We now turn to the values of $\alpha$ and $\beta$ for which best correlation is achieved.  
 
-With regards to \eqref{eqsim}, we can see the similarity of $w^*$ is related to the product of two expressions. Values of $\alpha$ and $\beta$ can make the one of the product approach one or and so the other parameter may dominate. In the article plot of \ref{fig:contour_fem:combined} our solution spaces moves linearly from $ \beta < 1 , \alpha \approx 0$ meaning that successful articles are are largely uninfluenced by quality of the work its editors do elsewhere. For editors, on the other hand there is a more complex spectrum of interpretations. Roughly we find a maxmizing area bounded $ -2  <\alpha < 1 , 0 < \beta > 2 $. This means that good editors are charaterized minorly by the quality of the articles they've contributed to and partly by the size of their touched articles portfolio, or in the case that alpha becomes negative that contributed-to aritcle quality is supremely important that touching many articles is anti-important.
+With regards to \eqref{eqsim}, we can see the similarity of $w^*$ is related to the product of two expressions. Values of $\alpha$ and $\beta$ can make the one of the product approach one or and so the other parameter may dominate {\bf [fix this sentence]} . In the article plot of Figure \ref{fig:landscape} our solution spaces moves linearly from $ \beta < 1 , \alpha \approx 0$ meaning that successful articles are largely uninfluenced by quality of the work its editors do elsewhere. For editors, on the other hand there is a more complex spectrum of interpretations. Roughly we find a maxmizing area bounded $ -2  <\alpha < 1 , 0 < \beta > 2 $. This means that good editors are charaterized minorly by the quality of the articles they've contributed to and partly by the size of their touched articles portfolio, or in the case that alpha becomes negative that contributed-to aritcle quality is supremely important that touching many articles is anti-important.
 
 
-Figure \ref{fig:ladndscape} shows typical landscapes of correlation as a function of $\alpha$ and $\beta$ for editors and articles. It appears that there is no single value of $\alpha$ and $\beta$ for best correlation, but rather some areas (showed by the contour line on Figure \ref{fig:landscape} as the 90th percentile of the rank correlation).
+Figure \ref{fig:ladndscape} shows typical landscapes of correlation as a function of $\alpha$ and $\beta$ for editors and articles. It appears that there is no single value of $\alpha$ and $\beta$ for best correlation, but rather some areas (showed by the contour line on Figure \ref{fig:landscape} as the 95th percentile of the rank correlation).
 
-The question remains if the intersection of the solution spaces for $\rho_a$ and $\rho_e$ is nonempty. That is whether the we can can find values of $\ of $\alpha$ and $\beta$ for to which our editor ranking and artilce ranking are simulataneously optimized. In \ref{landscape} such simultaneous optimizing solution space exists at the $\alpha \approx 0$ \beta \approx 0.8$ Which is when article ubiquity is more important than editor prolific output.
+The question remains if the intersection of the solution spaces for $\rho_a$ and $\rho_e$ is nonempty. That is whether the we can find values of $\alpha$ and $\beta$ for to which our editor ranking and article ranking are simultaneously optimized. In \ref{landscape} such simultaneous optimizing solution space exists at the $\alpha \approx 0$ $\beta \approx 0.8$ Which is when article ubiquity is more important than editor prolific output.
 
 \begin{figure}[!t]
 \centering
 \includegraphics[width=0.9\columnwidth]{Figures/contour_fem_combined.png}.
-\caption{Typical landscape of maximum correlation as a function of $\alpha$ and $\beta$ for editors (upper panel) and articles (lower panel). The contour line shows the 90th percentile of the rank correlation over the landscape.}}
+\caption{Typical landscape of maximum correlation as a function of $\alpha$ and $\beta$ for editors (upper panel) and articles (lower panel). The contour line shows the 90th percentile of the rank correlation over the landscape.}
 \label{fig:landscape}
 \end{figure}
 
