--- a/paper/sections/method2.tex
+++ b/paper/sections/method2.tex
@@ -33,8 +33,8 @@ To gain useful information Caldarelli et al. introduce nonlinear biases so that 
 
 \begin{equation}
 \begin{cases}
- w^{(n+1)}_e (\alpha,\beta) = \sum_{a=1}^{N_a}  \mathbf{G}_{ea}(\beta) \mathbf{w}^{(n)}_a (\alpha,\beta)\\
-w^{(n+1)}_a (\alpha,\beta) = \sum_{e=1}^{N_e}  \mathbf{G}_{ae}(\beta) \mathbf{w}^{(n)}_e (\alpha,\beta)\\
+ \mathbf{w}^{(n+1)}_e (\alpha,\beta) = \sum_{a=1}^{N_a}  \mathbf{G}_{ea}(\beta) \mathbf{w}^{(n)}_a (\alpha,\beta)\\
+\mathbf{w}^{(n+1)}_a (\alpha,\beta) = \sum_{e=1}^{N_e}  \mathbf{G}_{ae}(\beta) \mathbf{w}^{(n)}_e (\alpha,\beta)\\
 \end{cases}
 \label{random_walker}
 \end{equation}
@@ -48,7 +48,7 @@ where the Markov transition matrix $\mathbf{\hat{G}}$ is given by
  \end{cases}
 \end{equation}
 
-Here $\mathbf{G_{ea}}$ gives the probability to jump from article $a$ to editor $e$ in a single step, and $\mathbG_{ae}$ the probability to jump from editor $e$ to article $a$ also in a single step. We shall give more insights on how $\alpha$ and $\beta$ influence the random walker by analyzing the transition matrices $\mathbf{G}_{ea}(\beta)$ and $\mathbf{G}_{ae}(\alpha)$. The transition matrices depend only from the initial conditions $\mathbf{M}$ and $k_e$ and $k_a$ given by (\ref{HHinit}). Since both transition matrices have the same structure, we only explain the intuition for  $\alpha$ and $\mathbf{G}_{ae}(\alpha)$. $\alpha$ is the power exponent of the inverse of $k_a$, and therefore the bias depends on the possible values taken by $\alpha$. If $\alpha = 0$, we recover the zero\textsuperscript{th} order iteration. For $\alpha > 0$, the probability to jump from editor $e$ to article $a$ is weighted by a concave function of the sum of editors who have modified the article. The larger $\alpha$ the less the number of editors is important to an article. On the contrary, if $\alpha < 0$ the probability to jump from an editor to an article is a positive function of the sum of editors who have modified the article. For $-1 < \alpha < 0$, the function is concave, while for $\alpha < -1$, the function is convex, which means that the more editors, the even more the weight on the article. The same considerations hold for $\beta$ and the probability $\mathbf{G}_{ea}$ to jump from an article to an editor.
+Here $\mathbf{G_{ea}}$ gives the probability to jump from article $a$ to editor $e$ in a single step, and $\mathbf{G_{ae}}$ the probability to jump from editor $e$ to article $a$ also in a single step. We shall give more insights on how $\alpha$ and $\beta$ influence the random walker by analyzing the transition matrices $\mathbf{G}_{ea}(\beta)$ and $\mathbf{G}_{ae}(\alpha)$. The transition matrices depend only from the initial conditions $\mathbf{M}$ and $k_e$ and $k_a$ given by (\ref{HHinit}). Since both transition matrices have the same structure, we only explain the intuition for  $\alpha$ and $\mathbf{G}_{ae}(\alpha)$. $\alpha$ is the power exponent of the inverse of $k_a$, and therefore the bias depends on the possible values taken by $\alpha$. If $\alpha = 0$, we recover the zero\textsuperscript{th} order iteration. For $\alpha > 0$, the probability to jump from editor $e$ to article $a$ is weighted by a concave function of the sum of editors who have modified the article. The larger $\alpha$ the less the number of editors is important to an article. On the contrary, if $\alpha < 0$ the probability to jump from an editor to an article is a positive function of the sum of editors who have modified the article. For $-1 < \alpha < 0$, the function is concave, while for $\alpha < -1$, the function is convex, which means that the more editors, the even more the weight on the article. The same considerations hold for $\beta$ and the probability $\mathbf{G}_{ea}$ to jump from an article to an editor.
 
 A ranking-by-iteration plot shows how the ranking typically converges over iterations. As shown in Figure \ref{fig:convergence}, the algorithm converges in a non-trivial way as they can be reduced ergodic Markov chains \cite{caldarelli2012network}. In the iterative solution we see how certain editors start low, but then climb in rankings. This means that they are editing few articles, but those articles are of edited more by other users - our proxy so far for higher quality. Likewise there are some users who fall in rankings, which are those who edit a lot of articles, but the articles they edit are not edited by many others.
 
@@ -75,6 +75,14 @@ it is the analytical formulation we use onwards. It is important to note a cruci
 \centering
 \includegraphics[width=0.9\columnwidth]{Figures/fem_editors_iter_converge.png}.
 \caption{Convergence of $w_e$}
+\label{fig:convergence}
+\end{figure}
+
+
+\begin{figure}[!t]
+\centering
+\includegraphics[width=0.7\columnwidth]{Figures/bi-partite_net.eps}.
+\caption{}
 \label{fig:convergence}
 \end{figure}
 
